# Visual_navigation

./: .gitignore  CMakeLists.txt  README.md
include/: VideoProcessor.h  constant_parameters.h  utilities.h
src/: VideoProcessor.cpp  calculate_meters_lk.cpp  main.cpp  utilities.cpp
